transf_difs_grid.cl add another color control

--- a/mandelbulber2/formula/ui/transf_difs_cylinder.ui
+++ b/mandelbulber2/formula/ui/transf_difs_cylinder.ui
@@ -317,7 +317,7 @@
         <item row="1" column="0">
          <widget class="QLabel" name="label_188">
           <property name="text">
-           <string>iter add scale::</string>
+           <string>iter add scale:</string>
           </property>
          </widget>
         </item>
@@ -699,15 +699,15 @@
  </widget>
  <customwidgets>
   <customwidget>
+   <class>MyDoubleSpinBox</class>
+   <extends>QDoubleSpinBox</extends>
+   <header>my_double_spin_box.h</header>
+  </customwidget>
+  <customwidget>
    <class>MyGroupBox</class>
    <extends>QGroupBox</extends>
    <header>my_group_box.h</header>
    <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>MyDoubleSpinBox</class>
-   <extends>QDoubleSpinBox</extends>
-   <header>my_double_spin_box.h</header>
   </customwidget>
   <customwidget>
    <class>MySpinBox</class>
