--- a/mandelbulber2/formula/ui/transf_difs_clip_plane.ui
+++ b/mandelbulber2/formula/ui/transf_difs_clip_plane.ui
@@ -1421,7 +1421,7 @@
         <item row="4" column="0" colspan="2">
          <widget class="MyCheckBox" name="checkBox_transf_function_enabledJ_false">
           <property name="text">
-           <string>hybrid aux.dist</string>
+           <string>cumulative</string>
           </property>
          </widget>
         </item>
@@ -1765,6 +1765,11 @@
  </widget>
  <customwidgets>
   <customwidget>
+   <class>MyCheckBox</class>
+   <extends>QCheckBox</extends>
+   <header>my_check_box.h</header>
+  </customwidget>
+  <customwidget>
    <class>MyGroupBox</class>
    <extends>QGroupBox</extends>
    <header>my_group_box.h</header>
@@ -1774,11 +1779,6 @@
    <class>MyDoubleSpinBox</class>
    <extends>QDoubleSpinBox</extends>
    <header>my_double_spin_box.h</header>
-  </customwidget>
-  <customwidget>
-   <class>MyCheckBox</class>
-   <extends>QCheckBox</extends>
-   <header>my_check_box.h</header>
   </customwidget>
   <customwidget>
    <class>MySpinBox</class>
